# Enrollment-APIs-Monorepo

./: .env  .gitignore  README.md  docker-compose.yml
api-age-group/: pyproject.toml
api-age-group/app/: main.py
api-age-group/app/config/: db.py  mongodb.py
api-age-group/app/config/auth/: auth.py
api-age-group/app/models/: age-group.py  age_group.py
api-age-group/app/routers/: age-group_routes.py  ageGroup_routes.py
api-age-group/app/schemas/: age_group.py
api-age-group/app/tests/models/: test_age_groups.py  test_age_groups_model.py
api-age-group/app/tests/routers/: test_age_groups_route.py  test_age_groups_routes.py
api-enrollment/: Dockerfile  pyproject.toml
api-enrollment/app/: main.py
api-enrollment/app/config/: db.py  mongodb.py  rabbitmq.py
api-enrollment/app/models/: enrollment.py
api-enrollment/app/routers/: enrollment_routes.py
api-enrollment/app/schemas/: enrollment.py
api-enrollment/app/services/: enrollemnt_service.py
api-enrollment/app/tests/models/: test_enrollment.py  test_enrollment_model.py
api-enrollment/app/tests/routers/: test_enrollment_routes.py
processor/: Dockerfile  pyproject.toml
processor/src/: main.py
processor/src/config/: db.py  mongodb.py  rabbitmq.py
