[tool.poetry]
name = "api-enrollment"
version = "0.1.0"
description = ""
authors = ["guilhiz <guilhermevilelasobral@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.110.2"
uvicorn = "^0.29.0"
ruff = "^0.4.2"
pytest = "^8.1.2"
httpx = "^0.27.0"
pymongo = "^4.7.0"
pika = "^1.3.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.ruff.lint]
select = [
    "B",  # flake8-bugbear
    "C4", # flake8-comprehensions
    "D",  # pydocstyle
    "E",  # Error
    "F",  # pyflakes
    "I",  # isort
    "ISC", # flake8-implicit-str-concat
    "N",  # pep8-naming
    "PGH",  # pygrep-hooks
    "PTH", # flake8-use-pathlib
    "Q",  # flake8-quotes
    "S",  # bandit
    "SIM",  # flake8-simplify
    "TRY",  # tryceratops
    "UP",  # pyupgrade
    "W",  # Warning
    "YTT", # flake8-2020
]
ignore = [
    "B905",
    "D100",
    "D101",
    "D102",
    "D103",
    "D104",
    "D105",
    "D106",
    "D107",
    "D200",
    "D401",
    "E402",
    "E501",
    "F401",
    "TRY003",
]

[tool.ruff]
exclude = [
    "migrations",
    "__pycache__",
    ".vscode",
    ".pyenv",
    "build",
    "dist",
    ".git",
    "env",
    ".env",
    "venv",
    ".venv",
]

line-length = 120
indent-width = 4