[tool.poetry]
name = "processor"
version = "0.1.0"
description = ""
authors = ["guilhiz <guilhermevilelasobral@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
pika = "^1.3.2"
pymongo = "^4.7.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
